# lasusie

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  index.md
docs/extending/: design.md  index.md  likelihood.md  prior.md
docs/javascripts/: mathjax.js
docs/overview/: algorithm.md  likelihoods.md  model.md
examples/: 01_standard_susie.ipynb  02_survival_susie.ipynb  03_multiphenotype_susie.ipynb  04_multiancestry_susie.ipynb  README.md  _build_notebooks.py
src/lasusie/: __init__.py  api.py  covariates.py  design.py  ibss.py  laplace.py  likelihoods.py  model.py  priors.py  util.py
tests/: conftest.py  test_covariates.py  test_cox.py  test_design.py  test_dtype.py  test_ibss.py  test_laplace.py  test_likelihood_hierarchy.py  test_likelihoods.py  test_ordinal.py  test_prior.py  test_ser_fit.py  test_variance_toggle.py
