[project]
name = "lasusie"
requires-python = ">=3.11,<3.12"
version = "0.1.0"
dependencies = [
    "numpy>=2.2.6,<3",
    "jax-metal==0.1.0",
    "equinox>=0.13.8",
    "lineax>=0.1.1",
    "optimistix>=0.1.0",
    "jax>=0.10.2",
]

[dependency-groups]
examples = [
    "jupyterlab>=4.4.6,<5",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
